XWIKI-23878: Expose RequiredSkinExtensionRecorder as API
  * Move existing internal component and implem to xwiki-platform-skin
    module and expose it as API